# phoneme-splitter

./: .gitignore  README.md  pyproject.toml  run.ps1
src/: convert.ipynb  convert.py  split.ipynb  split.py
