[project]
name = "split-vowel"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "shunsei", email = "" }
]
dependencies = [
    "ipykernel>=6.25.2",
    "librosa>=0.10.1",
    "matplotlib>=3.8.0",
    "setuptools>=68.2.2",
]
readme = "README.md"
requires-python = ">= 3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true
